| Summary: | ASTERISK-22542: Call parking test failure: test fails due to no translation path between IAX2 channel and Local channel | ||
| Reporter: | Matt Jordan (mjordan) | Labels: | |
| Date Opened: | 2013-09-16 12:52:57 | Date Closed: | 2013-10-18 11:59:01 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Channels/chan_iax2 Channels/chan_local Tests/testsuite |
| Versions: | Frequency of Occurrence | ||
| Related Issues: | |||
| Environment: | Attachments: | ( 0) full.txt ( 1) messages.txt | |
| Description: | On a recent build of the Asterisk Test Suite, the callparking retrieval test failed. Upon inspecting the test, it immediately failed upon originating a Local channel that dialed an IAX2 channel. No translation path could be created between the Local channel and the IAX2 channel:
{noformat} [Sep 16 11:45:14] VERBOSE[15181][C-00000000] pbx.c: -- Executing [wait@parking:1] Answer("Local/wait@parking-00000000;2", "") in new stack [Sep 16 11:45:14] VERBOSE[15180] dial.c: -- Local/wait@parking-00000000;1 answered [Sep 16 11:45:14] VERBOSE[15180][C-00000001] pbx.c: -- Executing [callb@parking:1] Dial("Local/wait@parking-00000000;1", "IAX2/userc/userb@parking") in new stack [Sep 16 11:45:14] VERBOSE[15180][C-00000001] app_dial.c: -- Called IAX2/userc/userb@parking [Sep 16 11:45:14] VERBOSE[11061][C-00000001] chan_iax2.c: -- Call accepted by 127.0.0.1 (format ulaw) [Sep 16 11:45:14] WARNING[15180][C-00000001] channel.c: No path to translate from IAX2/userc-2163 to Local/wait@parking-00000000;1 [Sep 16 11:45:14] VERBOSE[11061][C-00000001] chan_iax2.c: -- Format for call is (ulaw) [Sep 16 11:45:14] VERBOSE[15180][C-00000001] chan_iax2.c: -- Hungup 'IAX2/userc-2163' [Sep 16 11:45:14] VERBOSE[15180][C-00000001] pbx.c: == Spawn extension (parking, callb, 1) exited non-zero on 'Local/wait@parking-00000000;1' [Sep 16 11:45:14] VERBOSE[15181][C-00000000] pbx.c: == Spawn extension (parking, wait, 1) exited non-zero on 'Local/wait@parking-00000000;2' {noformat} Full logs from the affected Asterisk instance are attached. | ||
| Comments: | |||